Revision history for perl distribution Mojo-IRC

0.22 Not Released
 - Add Mojo::IRC::UA
 - Add Mojo::IRC::UA->nick() method

0.21 2015-05-31T07:54:33+0200
 - Deprecated MOJO_IRC_OFFLINE in favor of Test::Mojo::IRC

0.20 2015-05-30T19:29:25+0200
 - Test::Mojo::IRC can fetch server output from __DATA__ section
 - Fix "choppy" buffer from Test::Mojo::IRC test server

0.19 2015-05-22T13:44:50+0200
 - Add Test::Mojo::IRC
 - Changed default value for nick() to mirror user()
 - Changed default value for user() to reflect current logged in user

0.18 2015-03-01T18:05:08Z
 - More tests are skipped on MSWin32

0.17 2015-02-15T21:44:25Z
 - Fix parsing bug in _read() on unknown numeric IRC event, #21
 - Fix setting nick in irc_rpl_welcome default handler, #20

0.16 2015-02-08T11:41:48Z
 - Add disconnect() can be called without a callback Contributor: Dan Book
 - Fix "close" event can reconnect Contributor: Dan Book
 - Fix responding to CTCP messages
 - Fix responding to CTCP PING message

0.15 2015-01-09T16:19:34Z
 - More robust unit tests

0.14 2015-01-02T13:31:11Z
 - Fix failing test on BSD

0.13 2014-09-14T20:16:25Z
 - emit_safe() is deprecated in Mojolicious

0.12 2014-09-06T19:25:13Z
 - Skip tests on MSWin32 #9

0.11 2014-08-31T14:32:11Z
 - Fix update of current nick() on err_nicknameinuse()

0.10 2014-08-16T20:24:25Z
 - Fix update of current nick()
 - Deprecated change_nick()

0.09 2014-07-29T08:43:34Z
 - Fix emitting err_xxx events before irc_error

0.08 2014-07-27T19:06:53Z
 - Will also emit numeric events
 - Move events out of main module documentation
 - Deprecated irc_err_xxx events

0.07 2014-05-30T07:46:58Z
 - Fix Mojo::IRC for Mojolicious 5.0

0.0601 2014-02-22T17:43:57Z
 - Fix missing ERR_ events.
 - Started DEPRECATION process for irc_err_xxx events.

0.06 2014-02-22T11:54:38Z
 - Allow offline mode with MOJO_IRC_OFFLINE=1

0.0501 2014-02-22T09:57:25Z
 - Add debug info to figure out failing error.t